# advent-of-code-2020

./: README.md  setup-day.sh
advent2020/: Cargo.toml
advent2020/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day12.rs  main.rs  output.rs
aoc01/: Cargo.toml
aoc01/src/: main.rs
aoc02/: Cargo.toml
aoc02/src/: main.rs
aoc03/: Cargo.toml
aoc03/src/: main.rs
aoc04/: Cargo.toml
aoc04/src/: main.rs
aoc05/: Cargo.toml
aoc05/src/: main.rs
aoc06/: Cargo.toml
aoc06/src/: main.rs
aoc07/: Cargo.toml  aoc07
aoc07/src/: main.rs
aoc08/: Cargo.toml
aoc08/src/: main.rs
aoc09/: Cargo.toml
aoc09/src/: main.rs
aoc10/: Cargo.toml
aoc10/src/: main.rs
aoc11/: Cargo.toml
aoc11/src/: main.rs
aoc111/: Cargo.toml
aoc111/src/: main.rs
aoc1111/: Cargo.toml
aoc1111/input/: game_of_life2.txt  game_of_life3.txt  gospel_glider.txt  input_reduced.txt  pulsar_oscillator.txt
aoc1111/src/: main.rs
aoc12/: Cargo.toml  aoc12
aoc12/src/: main.rs
aoc13/: Cargo.toml  python.py
aoc13/src/: main.rs
aoc14/: Cargo.toml
aoc14/src/: main.rs
aoc15/: Cargo.toml
aoc15/src/: main.rs
aoc16/: Cargo.toml
aoc16/src/: main.rs
aoc25/: Cargo.toml
aoc25/input/: input.txt
aoc25/src/: main.rs
