[package]
name = "advent2020"
version = "0.1.0"
authors = ["Kristoffer Sørensen <kristoffer.pbs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
itertools = "0.9"
lazy_static = "1.4.0"
regex = "1"
num-complex = "0.3.1"
